--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "dist/js",
-    "rootDir": "src",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
   "include": ["."],
-  "exclude": ["src/types/*.ts", "node_modules", ".vscode", "client"]
+  "exclude": ["types/*.ts", "node_modules", ".vscode", "client"]
 }
