--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
         "@types/jsonwebtoken": "^8.5.5",
         "@types/mongoose": "^5.11.97",
         "@types/mongoose-unique-validator": "^1.0.5",
+        "@types/morgan": "^1.9.3",
+        "@types/multer": "^1.4.7",
         "@types/node": "^16.10.1",
         "@types/passport": "^1.0.7",
         "@types/passport-facebook": "^2.1.11",
