--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.1",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "json-server": "^0.16.3",
@@ -20,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "tailwind": "^4.0.0",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
   },
@@ -48,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.0",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
     "stylelint": "^13.13.1",
