--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jsonwebtoken": "^8.5.5",
+        "@types/mongodb": "^4.0.7",
         "@types/mongoose": "^5.11.97",
         "@types/mongoose-unique-validator": "^1.0.5",
         "@types/morgan": "^1.9.3",
