--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "eslint-plugin-react": "^7.20.6",
         "nodemon": "^2.0.13",
         "prettier": "2.0.5",
-        "ts-node": "^10.2.1"
+        "ts-node": "^10.2.1",
+        "typescript": "^4.4.3"
     }
 }
