--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "scripts": {
         "build": "tsc",
+        "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
         "start": "cross-env NODE_ENV=production concurrently \"tsc -w\" \"nodemon dist/js/index.js\"",
         "start:dev": "cross-env NODE_ENV=development nodemon dist/js/index.js",
         "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
