--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "scripts": {
         "build": "tsc",
         "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+        "prestart": "npm run build",
         "start": "cross-env NODE_ENV=production concurrently \"tsc -w\" \"nodemon dist/js/index.js\"",
         "start:dev": "cross-env NODE_ENV=development nodemon dist/js/index.js",
         "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
@@ -68,6 +69,7 @@
         "nodemon": "^2.0.13",
         "prettier": "2.0.5",
         "ts-node": "^10.2.1",
+        "tslint": "^6.1.3",
         "typescript": "^4.4.3"
     }
 }
