--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
         "build": "tsc",
         "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
         "prestart": "npm run build",
-        "start": "cross-env NODE_ENV=production concurrently \"tsc -w\" \"nodemon dist/js/index.js\"",
-        "start:dev": "cross-env NODE_ENV=development nodemon dist/js/index.js",
+        "web": "npm start",
+        "start": "NODE_ENV=production node dist/js/index.js",
+        "start:dev": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"nodemon dist/js/index.js\"",
         "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
         "build:ui": "rm -rf build && cd ./client && npm run build --prod  && cp -r build ..",
         "deploy": "git push heroku main",
