--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "start": "NODE_ENV=production node dist/js/index.js",
         "start:dev": "cross-env NODE_ENV=development concurrently \"tsc -w\" \"nodemon dist/js/index.js\"",
         "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-        "build:ui": "rm -rf build && cd ./client && npm run build --prod  && cp -r build ..",
+        "build:ui": "rm -rf build && cd ./client && npm run build --prod  && cp -r build ../dist/js",
         "deploy:manual": "git push heroku main",
         "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && git push heroku",
         "deploy:only": "git add . && git commit -m deploy && git push heroku",
