--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "json-server": "^0.16.3",
+    "pretty": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-loading": "^2.0.3",
