--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/forms": "^0.3.2",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.1",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.1",
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/pretty": "^2.0.0",
     "@types/react-router-dom": "^5.3.0",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
