--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@craco/craco": "^6.1.1",
     "@headlessui/react": "^1.1.1",
     "@heroicons/react": "^1.0.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "@tailwindcss/forms": "^0.3.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.7",
@@ -22,8 +23,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-loading": "^2.0.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "tailwind": "^4.0.0",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.0",
@@ -56,8 +60,12 @@
   "devDependencies": {
     "@types/pretty": "^2.0.0",
     "@types/react-router-dom": "^5.3.0",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-mock-store": "^1.0.3",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
